# jfyy

./: README.md
s043DoubleBuffering-main/: CMakeLists.txt
s043DoubleBuffering-main/src/: common.cpp  common.h  main.cpp
s043DoubleBuffering-main/src/core/: GameLoop.cpp  StateMachine.cpp
s043DoubleBuffering-main/src/gameplay/: Food.cpp  Snake.cpp
s043DoubleBuffering-main/src/persistence/: SaveSystem.cpp
s043DoubleBuffering-main/src/systems/: InputSystem.cpp  RenderSystem.cpp  TimeSystem.cpp
